--- a/Chap 1 - Introduction.ipynb
+++ b/Chap 1 - Introduction.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# The beginnings\n",
     "Before even starting to learn JavaScript, I made my hands dirty with HTML and CSS. The best way to do that for a newbie is to head to [w3schools.com](https://www.w3schools.com/) and start practicing the basics in its online compiler. Once you gain a bit of confidence, go to any text editor in your PC/Mac (say Notepad) and start writing the same code there. Then save it as a filename.html file and double-click on the file in your folder to open it in your default browser (Chrome for me, but Firefox is also great). Later I switched to Sublime Text and then to VSCode as my code editor.\n",
-    "After sufficient practice in HTML and CSS, I tried going over to JS. I followed a three-prong strategy. I started by trying JS code within `<script></script>` tag of my html file.Then I added my JS code in `separate .js file`. Finally I dispensed with html file altogether and ran my js code standalone using the `nodejs` runtime. Finally I switched to running my JS file using the `deno` runtime kernel within Jupyter notebook. The current notebook is created using the last method. I'll explain these things in detail later, so don't worry. Nobody will be left behind :) There are many cool projects in JS that I will be telling alongwith associated concepts. So its gonna be a great learning experience. But before that, lets understand a few concepts. \n",
+    "After sufficient practice in HTML and CSS, I tried going over to JS. There are many cool projects in JS that I will be telling alongwith associated concepts. So its gonna be a great learning experience.But before that, lets understand a few concepts. For a more holistic understanding of Javascript first as an OOP and then as an in-browser language, you can refer to [javascript.info](https://javascript.info/) later.   \n",
     "NB. : The hyperlinked text matter you'll see all along is optional. You can click & read them for conceptual clarity if needed. Beginners should surely read them."
    ]
   },
@@ -370,15 +370,17 @@
     "\n",
     "By now you must have got the taste of JavaScript ! Before you get into more complex and fun projects, lets be clear about the different tools & environments you can work on. I'll share my own journey so that its not uncharted for you :) \n",
     "\n",
-    "1. As I said in the beginning, I started simply with the Notepad. I created a single html file and put in all my CSS code within in the `<style>` tag or the `style:` attribute of the concerned element, and all my JS code within a `<script>` tag. Then I double clicked my html file and it rendered in my default browser.  \n",
+    "1. As I said in the beginning, I started simply with the Notepad. I created a single html file and put in all my CSS code within the `<style>` tag or the `style:` attribute of the concerned element, and all my JS code within a `<script>` tag. Then I double clicked my html file and it rendered in my default browser.  \n",
     "\n",
-    "2. When CSS and JS code grew bulky, I created separate .html, .css and .js files in a folder and linked them in my html file using  \n",
+    "2. When CSS and JS code grew bulky, I created separate .html, .css and .js files in a folder and linked them in my html file (preferably within the `<head> tag) using  \n",
     "`<link rel=\"stylesheet\" type=\"text/css\" href=\"styles.css\">` and  \n",
     "`<script src=\"script.js\"></script>` respectively. Then I ran the .html file as before.  \n",
     "\n",
     "3. Next I switched to an advanced editor. Instead of Notepad, I used Sublime Text. Its lightweight and here I can have `folder view` and also open a `termainal` with [Alt+1](https://www.geeksforgeeks.org/how-to-use-terminal-in-sublime-text-editor/). Language based color coding is also available. You can open your html file and right-click on the screen and click \"Open in Browser\".\n",
     "\n",
-    "4. Next I switched to Visual Studio Code. I soon realised that its much powerful than Sublime. I can \n"
+    "4. Next I switched to Visual Studio Code. I soon realised that its much powerful than Sublime. With the `Live Preview` extension, you can preview the main .html file of your project in real time within the editor itself (Ref. the extension documentation for guidance). \n",
+    "\n",
+    "5. Other tools: I also tried online tools like [CodePen](https://codepen.io/) and [CodeSandbox](https://codesandbox.io/). If you want to get the exact VSCode experience online without downloading VSCode Desktop, you can try `Github Codespace` (has preinstalled Git) or `vscode.dev` which run on cloud-based virtual machines. You can create a Jupyter Notebook (either in VSCode, Jupyter lab or remote-hosted Juputer notebook using Anaconda) with the deno kernel and run JS there: infact that's how this notebook is created. You can also code and debug in the `DevTools` of your browser. Finally you can use a runtime like `nodejs` or `deno` to run your js code exclusively without any html file. `Devtools` and `nodejs` is actually quite important but a little more detailed. I'll take that them up later.\n"
    ]
   },
   {
