--- a/Chap 1 - Introduction.ipynb
+++ b/Chap 1 - Introduction.ipynb
@@ -372,7 +372,7 @@
     "\n",
     "1. As I said in the beginning, I started simply with the Notepad. I created a single html file and put in all my CSS code within the `<style>` tag or the `style:` attribute of the concerned element, and all my JS code within a `<script>` tag. Then I double clicked my html file and it rendered in my default browser.  \n",
     "\n",
-    "2. When CSS and JS code grew bulky, I created separate .html, .css and .js files in a folder and linked them in my html file (preferably within the `<head> tag) using  \n",
+    "2. When CSS and JS code grew bulky, I created separate .html, .css and .js files in a folder and linked them in my html file (preferably within the `<head>` tag) using  \n",
     "`<link rel=\"stylesheet\" type=\"text/css\" href=\"styles.css\">` and  \n",
     "`<script src=\"script.js\"></script>` respectively. Then I ran the .html file as before.  \n",
     "\n",
