Add 9 chapters to the tutorial
- Added "1-Git.md"
- Renamed "Chap 1 - Introduction.ipynb" to "2-JavaScript.ipynb"
- Added "3-CSS.md"
- Added "4-React.md"
- Added "5-Firebase.md"
- Added "6-Backend.md"
- Added "7-Running locally.md"
- Added "8-Deployment.md"
- Added "9-Payments.md"

--- a/2-JavaScript.ipynb
+++ b/2-JavaScript.ipynb
@@ -5,7 +5,7 @@
    "id": "d3c19ffe-0560-4d39-9bf4-990b0d59331a",
    "metadata": {},
    "source": [
-    "# The beginnings\n",
+    "# Introduction to JavaScript\n",
     "Before even starting to learn JavaScript, I made my hands dirty with HTML and CSS. The best way to do that for a newbie is to head to [w3schools.com](https://www.w3schools.com/) and start practicing the basics in its online compiler. Once you gain a bit of confidence, go to any text editor in your PC/Mac (say Notepad) and start writing the same code there. Then save it as a filename.html file and double-click on the file in your folder to open it in your default browser (Chrome for me, but Firefox is also great). Later I switched to Sublime Text and then to VSCode as my code editor.\n",
     "After sufficient practice in HTML and CSS, I tried going over to JS. There are many cool projects in JS that I will be telling alongwith associated concepts. So its gonna be a great learning experience.But before that, lets understand a few concepts. For a more holistic understanding of Javascript first as an OOP and then as an in-browser language, you can refer to [javascript.info](https://javascript.info/) later.   \n",
     "NB. : The hyperlinked text matter you'll see all along is optional. You can click & read them for conceptual clarity if needed. Beginners should surely read them."
@@ -231,7 +231,7 @@
     "### Explanation of Example 1\n",
     "In the first line of the above code, note that I import the `html` function from the [display.js](https://deno.land/x/display@v1.1.2) module of Deno imported from a URI. This is followed by plugging my html code within the `html` `` ` `` ...code... `` `; `` snippet. This is absolutely similar to the what the ipy3 kernel offers, i.e. `import html from IPython.display` and then `%%html` followed by your html code. This allows inline rendering of html content within Jupyter notebook.  \n",
     "\n",
-    "Now `document.getElementbyID()` returns an `element` object on which `addEventListener` method can be used.  The 1st argument of the `addEventListener` method is the nature of the event i.e. `click` in this case. The 2nd argument is the entire definition of an `anonymous` function (called `event handler`) which defines the `response to` this click event. Go through it and check the cell output and you'll understand.  \n",
+    "Now `document.getElementbyID()` returns an `element` object on which `addEventListener` method can be used.  The 1st argument of the `addEventListener` method is the `event selector` which tells the nature of the event i.e. `click` in this case. The 2nd argument is the entire definition of an `anonymous` function (called `event handler`) which defines the `response to` this click event. Go through it and check the cell output and you'll understand.  \n",
     "\n",
     "NB. You can also use the more general `querySelector()` or the `querySelectorAll()` methods instead of the getElementbyID() or getElementsbyClassName() methods respectively. `querySelectorAll()` or `getElementsbyClassName()` returns a NodeList. This NodeList is like an array which serves as an `object` on which the [forEach() or map()](https://www.geeksforgeeks.org/difference-between-foreach-and-map-loop-in-javascript/) methods can be performed for element-wise operations. Both these methods take that element-wise operating function as its argument.  \n",
     "\n",
@@ -348,7 +348,10 @@
     "    };\n",
     "\n",
     "The use of addEventListener() is generally preferred for more complex applications due to its flexibility in handling multiple events on the same element without conflicts.  \n",
-    "*Another fun fact*: Since the above event handler function has only one parameter namely `event` or `e`, you can dispense with the parenthesis and simply write `event=>{....}` !"
+    "*Another fun fact*: Since the above event handler function has only one parameter namely `event` or `e`, you can dispense with the parenthesis and simply write `event=>{....}` !\n",
+    "\n",
+    "Additionally, pure HTML also provides event selectors like onclick, onmouseover, onhover, onkeypress, etc. in the form of attributes, eg.  \n",
+    "`<button onclick=\"myFunction()\">Click me</button>` "
    ]
   },
   {
@@ -378,7 +381,7 @@
     "\n",
     "3. Next I switched to an advanced editor. Instead of Notepad, I used Sublime Text. Its lightweight and here I can have `folder view` and also open a `termainal` with [Alt+1](https://www.geeksforgeeks.org/how-to-use-terminal-in-sublime-text-editor/). Language based color coding is also available. You can open your html file and right-click on the screen and click \"Open in Browser\".\n",
     "\n",
-    "4. Next I switched to Visual Studio Code. I soon realised that its much powerful than Sublime. With the `Live Preview` extension, you can preview the main .html file of your project in real time within the editor itself (Ref. the extension documentation for guidance). \n",
+    "4. Next I switched to Visual Studio Code. I soon realised that its much powerful than Sublime. With the `Live Preview` extension, you can preview the main .html file of your project in real time within the editor itself (Ref. the extension documentation for guidance). You can also create very quick code snippets with the [Emmet toolkit](https://www.freecodecamp.org/news/write-html-css-faster-with-emmet-cheat-codes/).\n",
     "\n",
     "5. Other tools: I also tried online tools like [CodePen](https://codepen.io/) and [CodeSandbox](https://codesandbox.io/). If you want to get the exact VSCode experience online without downloading VSCode Desktop, you can try `Github Codespace` (has preinstalled Git) or `vscode.dev` which run on cloud-based virtual machines. You can create a Jupyter Notebook (either in VSCode, Jupyter lab or remote-hosted Juputer notebook using Anaconda) with the deno kernel and run JS there: infact that's how this notebook is created. You can also code and debug in the `DevTools` of your browser. Finally you can use a runtime like `nodejs` or `deno` to run your js code exclusively without any html file. `Devtools` and `nodejs` is actually quite important but a little more detailed. I'll take that them up later.\n"
    ]
